# NWB_generator_example

./: Data_2_NWB_v2.m  README.md
python/: make_nwb.py  make_nwb_2probes.py  make_nwb_alicante.py  pyproject.toml  readme.md
